# AnDbg

./: .gitignore  .gitmodules  CMakeLists.txt  Log.cpp  Log.hpp  README.md  breakpoint_manager.cpp  build.sh  debugger_core.cpp  debugger_core.hpp  elf_resolver.cpp  elf_resolver.hpp  memory_manager.hpp  register_manager.cpp  register_manager.hpp  symbol_resolver.cpp  symbol_resolver.hpp  utils.hpp
src/: CMakeLists.txt  Log.cpp  Log.hpp  acp.md  assembly.cpp  assembly.hpp  assembly_instrument.cpp  assembly_instrument.hpp  breakpoint_manager.cpp  breakpoint_manager.hpp  debugger_core.cpp  debugger_core.hpp  disassemble_core.cpp  disassemble_core.hpp  disassembly.cpp  disassembly.hpp  disassembly_core.cpp  disassembly_core.hpp  elf_injector.cpp  elf_injector.hpp  elf_loader.cpp  elf_loader.hpp  elf_resolver.cpp  elf_resolver.hpp  file.cpp  file.hpp  log.cpp  log.hpp  main.cpp  memory_control.cpp  memory_control.hpp  memory_manager.cpp  memory_manager.hpp  proc_file.cpp  proc_file.hpp  process.cpp  process.hpp  register_control.cpp  register_control.hpp  register_manager.cpp  (+7 more)
test/: base.py  base_test.py  breakpoint.py  execution.py  launch_test.py  memory.py  other.py  process.py  process_test.py  register.py  register_test.py  rpc_client.py  test.py  test.sh
tools/: run_tests.py  update.py  utils.py
