# 指定 NDK 路径
set(ANDROID_NDK "$ENV{ANDROID_NDK_HOME}")
if(NOT ANDROID_NDK)
    message(FATAL_ERROR "未设置 ANDROID_NDK_HOME 环境变量！请配置 NDK 路径")
endif()

# Android 核心配置
set(ANDROID_PLATFORM android-24 CACHE STRING "" FORCE)
set(ANDROID_ABI arm64-v8a CACHE STRING "" FORCE) 
set(CMAKE_ANDROID_STL_TYPE c++_static CACHE STRING "" FORCE)
set(CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE)
set(CMAKE_POSITION_INDEPENDENT_CODE ON CACHE BOOL "" FORCE)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE BOOL "" FORCE)

# 引入 NDK 的 CMake 工具链
include(${ANDROID_NDK}/build/cmake/android.toolchain.cmake)

# 先引入 NDK, 否则会有问题
cmake_minimum_required(VERSION 3.18)
project(AnDbg)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# 编译第三方库
set(FMT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/fmt)
if(NOT EXISTS ${FMT_SOURCE_DIR}/CMakeLists.txt)
  message(FATAL_ERROR "fmt 源码缺失")
endif()
add_subdirectory(${FMT_SOURCE_DIR}) 

set(CAPSTONE_ARCHITECTURE_DEFAULT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_ARM_SUPPORT ON CACHE BOOL "" FORCE)
set(CAPSTONE_ARM64_SUPPORT ON CACHE BOOL "" FORCE)
# 禁用所有非 ARM 架构
set(CAPSTONE_M68K_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_MIPS_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_PPC_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_SPARC_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_SYSZ_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_XCORE_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_X86_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_TMS320C64X_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_M680X_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_EVM_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_MOS65XX_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_WASM_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_BPF_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_RISCV_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_SH_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_TRICORE_SUPPORT OFF CACHE BOOL "" FORCE)
set(CAPSTONE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/capstone)
if(NOT EXISTS ${CAPSTONE_SOURCE_DIR}/CMakeLists.txt)
  message(FATAL_ERROR "capstone 源码缺失")
endif()
add_subdirectory(${CAPSTONE_SOURCE_DIR}) 

set(JSON_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/third_party/json)
if(NOT EXISTS ${JSON_SOURCE_DIR}/CMakeLists.txt)
  message(FATAL_ERROR "json 源码缺失")
endif()
add_subdirectory(${JSON_SOURCE_DIR}) 

# 编译核心文件
add_subdirectory(src)

# 链接
target_link_libraries(
AnDbg 
  PRIVATE 
    fmt::fmt 
    capstone 
    nlohmann_json::nlohmann_json
    log)

# 编译选项
target_compile_options(AnDbg PRIVATE
  -O2
)

# 统一可执行文件输出路径
set_target_properties(AnDbg PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
)